--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -3,7 +3,11 @@
     <div>
       <div class="logo">{{ settings.logo_text | default: shop.name }}</div>
       <p>{{ section.settings.tagline }}</p>
-      <p><strong>Contact :</strong> {{ shop.email }}</p>
+      <p class="footer__contact">
+        <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M4 5h16a2 2 0 0 1 2 2v10.5A1.5 1.5 0 0 1 20.5 19h-17A1.5 1.5 0 0 1 2 17.5V7a2 2 0 0 1 2-2Zm0 2v.3l8 4.7 8-4.7V7Z"/></svg>
+        {{ shop.email }}
+      </p>
+      {% render 'social-links', class: 'footer__social', stacked: true %}
     </div>
     <div>
       <h4>Boutique</h4>
@@ -19,9 +23,7 @@
     </div>
     <div>
       <h4>Réseaux</h4>
-      {% if settings.social_instagram %}<a href="{{ settings.social_instagram }}">Instagram</a><br>{% endif %}
-      {% if settings.social_facebook %}<a href="{{ settings.social_facebook }}">Facebook</a><br>{% endif %}
-      {% if settings.social_youtube %}<a href="{{ settings.social_youtube }}">YouTube</a><br>{% endif %}
+      {% render 'social-links' %}
     </div>
   </div>
   <div class="container footer__bottom">
